--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   responsive_builder: ^0.4.2
   get_it: ^7.2.0
+  flutter_web3: ^2.1.9
+  provider: ^6.0.2
+  dropdown_button2: ^1.3.0
+  equatable: ^2.0.3
+  walletconnect_dart: ^0.0.10
 
 dev_dependencies:
   flutter_test:
