--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dropdown_button2: ^1.3.0
   equatable: ^2.0.3
   walletconnect_dart: ^0.0.10
+  flutter_easyloading: ^3.0.3
+  google_fonts: ^2.3.2
+  syncfusion_flutter_charts: ^20.1.55
 
 dev_dependencies:
   flutter_test:
